# oomphlib_002

./: .gitignore
src/generic/: block_preconditioner.h  elements.cc  elements.h  general_purpose_block_preconditioners.h  matrices.h  matrix_vector_product.cc  oomph_utilities.cc  oomph_utilities.h  trilinos_helpers.cc
src/navier_stokes/: Makefile.am  constrained_navier_stokes_preconditioners.cc  constrained_navier_stokes_preconditioners.h  impose_impenetrability_element.h  impose_parallel_outflow_element.h  lagrange_enforced_flow_preconditioner.h  navier_stokes_preconditioners.h
user_drivers/lagrange_cube/: cube1.cc  cube2.cc  cube5.cc
user_drivers/lagrange_square/: Makefile.am  run_sq0.sh  square0.cc  square1.cc  square2.cc  square3.cc  square4.cc  square5.cc
